--- a/css/style.scss
+++ b/css/style.scss
@@ -609,7 +609,12 @@ p{
         }
 
         ul{
-            padding: 4em 0;
+            padding: 1em 0 4em 0;
+        }
+
+        h4{
+            padding-top: 1.5em;
+            font-weight: 400;
         }
 }
 
@@ -621,21 +626,35 @@ p{
     border-bottom: none;
 }
 
-.storytekstbillede{
-    display: flex;
-    width: 100%;
-    margin-bottom: 70px;
+.case-wrapper{
+    display: grid;
+    grid-template-columns:repeat(22em 1fr 22em);
 
-        article{
-            padding: 2em 6em;
+        .tekst-venstre{
+            grid-column: 1/3;
+            padding: 0 4em 0 6em;
         }
 
-        img{
-            max-width: 25%;
-            height: auto;
-            aspect-ratio: 16/9;
+        .billede-hojre{
+            grid-column: 3/4;
+            max-width: 100%;
+            justify-self: end;
+            align-self: center;
         }
+
+        .billede-venstre{
+            grid-column: 1/2;
+            max-width: 100%;
+        }
+
+        .tekst-hojre{
+            grid-column: 3/4;
+            padding: 0 6em 0 4em;
+        }
+
+
 }
+
 
 .wooddesignoverskrift{
     font-size: 30px;
@@ -645,9 +664,6 @@ p{
 
 .beigekasse{
     background-color: partial.$primary-color;
-    width: 70%;
-    position: relative;
-    right: 0;
 }
 
 .beigeborder{
