--- a/css/style.css
+++ b/css/style.css
@@ -603,19 +603,20 @@ p {
 
 .case {
   background-color: #F7F1E6;
-  margin: 4em 0;
-  padding: 3em 6em 1em 6em;
+  margin: 4em 0 0 0;
+  padding: 3em 6em 0 6em;
   border: 7px solid #AD5715;
   border-bottom: none;
 }
 
 .case-wrapper {
   display: grid;
-  grid-template-columns: repeat(22em 1fr 22em);
+  grid-template-columns: repeat(1fr 1fr 1fr);
+  padding-bottom: 4em;
 }
 .case-wrapper .tekst-venstre {
   grid-column: 1/3;
-  padding: 0 4em 0 6em;
+  padding: 4em 4em 4em 6em;
 }
 .case-wrapper .billede-hojre {
   grid-column: 3/4;
@@ -626,10 +627,12 @@ p {
 .case-wrapper .billede-venstre {
   grid-column: 1/2;
   max-width: 100%;
+  padding: 4em 2em 3em 0;
+  justify-self: left;
 }
 .case-wrapper .tekst-hojre {
   grid-column: 3/4;
-  padding: 0 6em 0 4em;
+  padding: 4em 6em 0 2em;
 }
 
 .wooddesignoverskrift {
@@ -646,6 +649,29 @@ p {
   border: 7px solid #F7F1E6;
   border-right: none;
   border-left: none;
+}
+
+.grid-justering {
+  padding: 4em 4em 3em 6em;
+}
+
+.illu-grid {
+  padding: 3em 6em 3em 4em;
+}
+
+.woodfarve {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 3em 6em 3em 4em;
+}
+.woodfarve img {
+  width: 75%;
+}
+
+.img-just {
+  width: 100%;
+  height: auto;
 }
 
 .nysgerrigstory {
