--- a/css/style.scss
+++ b/css/style.scss
@@ -620,19 +620,20 @@ p{
 
 .case{
     background-color: partial.$primary-color;
-    margin: 4em 0;
-    padding: 3em 6em 1em 6em;
+    margin: 4em 0 0 0;
+    padding: 3em 6em 0 6em;
     border: 7px solid partial.$secondary-color;
     border-bottom: none;
 }
 
 .case-wrapper{
     display: grid;
-    grid-template-columns:repeat(22em 1fr 22em);
+    grid-template-columns:repeat(1fr 1fr 1fr);
+    padding-bottom: 4em;
 
         .tekst-venstre{
             grid-column: 1/3;
-            padding: 0 4em 0 6em;
+            padding: 4em 4em 4em 6em;
         }
 
         .billede-hojre{
@@ -645,16 +646,17 @@ p{
         .billede-venstre{
             grid-column: 1/2;
             max-width: 100%;
+            padding: 4em 2em 3em 0;
+            justify-self: left;
         }
 
         .tekst-hojre{
             grid-column: 3/4;
-            padding: 0 6em 0 4em;
+            padding: 4em 6em 0 2em;
         }
 
 
 }
-
 
 .wooddesignoverskrift{
     font-size: 30px;
@@ -670,6 +672,30 @@ p{
     border: 7px solid partial.$primary-color;
     border-right: none;
     border-left: none;
+}
+
+.grid-justering{
+    padding: 4em 4em 3em 6em;
+}
+
+.illu-grid{
+    padding: 3em 6em 3em 4em;
+}
+
+.woodfarve{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 3em 6em 3em 4em;
+
+        img{
+            width: 75%;
+        }
+}
+
+.img-just{
+    width: 100%;
+    height: auto;
 }
 
 .nysgerrigstory{
