--- a/css/style.css
+++ b/css/style.css
@@ -617,6 +617,8 @@ p {
 .case-wrapper .tekst-venstre {
   grid-column: 1/3;
   padding: 4em 4em 4em 6em;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .case-wrapper .billede-hojre {
   grid-column: 3/4;
@@ -626,13 +628,19 @@ p {
 }
 .case-wrapper .billede-venstre {
   grid-column: 1/2;
-  max-width: 100%;
-  padding: 4em 2em 3em 0;
-  justify-self: left;
+  display: grid;
+  grid-column: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 1/1;
+  width: 100%;
+  height: auto;
+  align-self: center;
+  padding: 2em 0;
 }
 .case-wrapper .tekst-hojre {
   grid-column: 3/4;
-  padding: 4em 6em 0 2em;
+  padding: 4em 6em 0 4em;
 }
 
 .wooddesignoverskrift {
@@ -667,11 +675,6 @@ p {
 }
 .woodfarve img {
   width: 75%;
-}
-
-.img-just {
-  width: 100%;
-  height: auto;
 }
 
 .nysgerrigstory {
