--- a/css/style.scss
+++ b/css/style.scss
@@ -55,7 +55,7 @@ p{
     /*BG-Forside*/
         .BGforside{
             background-image: url('../img/BGforside.png');
-            background-size: cover;
+            background-size: contain;
             background-position: top;
             background-repeat: no-repeat;
             width: 100%;
@@ -64,7 +64,7 @@ p{
     /*BG-om os*/
         .BGomos{
             background-image: url('../img/BGomos.png');
-            background-size: cover;
+            background-size: contain;
             background-position: top;
             background-repeat: no-repeat;
             width: 100%;
@@ -186,10 +186,42 @@ p{
 
 /*********-- Styling af Forsiden --*********/
 
-/*hover hero-billede*/
+/*hero-sektion*/
 
-.illforside:hover{
-    content: url(../img/illustration\ -\ forside3.png);
+.hero-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.hero-section video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;
+    transform: translate(-50%, -50%);
+    top: 40;
+}
+
+.hero-section .hero-content {
+    position: relative;
+    z-index: 2;
+}
+
+.hero-content {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /*Branding video*/
@@ -312,10 +344,10 @@ p{
   }
   
   .slider{
-    padding: 0 10px 0 10px;
+    padding: 0 40px 0 20px;
+    margin-left: 60px;
   }
   
-
 
 /**********--Styling af Ydelser--***********/
 
@@ -709,6 +741,113 @@ p{
 
 /**********--- Styling af Om Sotry Media siden---*******/
 
+/*Billede præsentation*/
+.img-os{
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    margin-top: 200px;
+
+        img{
+            height: 360px;
+            width: 290px;
+        }
+}
+
+.overlay{
+    position: relative;
+}
+
+.streg-fyld{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.info-os{
+    background-color: partial.$bg-color;
+    margin-top: 350px;
+    padding: 100px;
+}
+
+/*billede + kasse m. border*/
+.iveark-os{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 100px;
+}
+
+.iveark-os-img{
+    grid-column: 1/2;
+    width: 100%;
+    height: 850px;
+    object-fit: cover;
+}
+
+.iveark-os-txt{
+    grid-column: 2/4;
+    border: 7px solid partial.$primary-color;
+    border-left: none;
+    padding: 150px 150px 0 150px;
+}
+
+/*Specialisering*/
+.special{
+    margin-bottom: 100px;
+}
+
+.beige-box1{
+    display: flex;
+    justify-content: center;
+}
+.special{
+    text-align: center;
+
+        .beige-box{
+            background-color: partial.$primary-color;
+            width: 600px;
+            height: 650px;
+            padding: 100px 20px 0 20px ;
+            border: 7px solid partial.$bg-color;
+        }
+}
+
+/*Start up + pynt (billede på billede)*/
+.startup-omos{
+    position: relative;
+    text-align: center;
+    margin: 200px 0 200px 0;
+}
+
+.stregen-fyld{
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+}
+
+.ourstory{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 200px;
+}
+
+.story-os{
+    grid-column: 1/3;
+    border: 7px solid partial.$primary-color;
+
+        img{
+            width: 500px;
+        }
+}
+
+.veardi{
+    grid-column: 3/4;
+    background-color: pratial.$primary-color;
+}
 
 
 /**********---Styling af Kontakt siden---*************/
