--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /* Variabler*/
 /*Mixins*/
+/*Tablet*/
 /*Mobil*/
 /*Generel styling*/
 * {
@@ -518,6 +519,22 @@ p {
 }
 
 /*********--Styling af Branding proces--***********/
+@media screen and (max-width: 900px) {
+  .knap {
+    background-color: #AD5715;
+    border-radius: 50px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    text-decoration: none;
+    text-align: center;
+    padding: 13.5px 111px;
+    color: #fff;
+    font-family: "roboto", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+}
 /* Branding hovedområde */
 .branding-container-venstre {
   display: grid;
