html til mobil-footer

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -157,6 +157,15 @@ p{
 }
 
 
+.footer-tablet-desktop{
+    display: none;
+}
+
+.footer-mobil{
+        
+
+}
+
 
 /*******---Branding proces--*******/
 
