--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -130,7 +130,7 @@ p{
 
 .header2{
     position: fixed;
-    left: 85%;
+    left: 80%;
 }
 
 .menu{
@@ -204,10 +204,34 @@ p{
 
 .footerform{
     margin-left: 2em;
+    display: flex;
+    flex-direction: column;
 }
 
-form{
+.footer-mobil input[type=submit]{
     display: flex;
+   justify-content: center;
+}
+
+.copy{
+    font-size: 16px;
+    font-weight: 200;
+    padding: 1em 0;
+}
+
+.footer-kontakt{
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 2em 2em;
+}
+
+.telefonikon-footer{
+    height: 16px;
+    width: 16px;
+}
+
+.mailikon, .telefonikon-footer{
+    padding-left: 0.2em;
 }
 
 /*******---Branding proces--*******/
