--- a/css/style.css
+++ b/css/style.css
@@ -369,8 +369,15 @@ p {
 /*Hovedindhold*/
 .stark-container {
   display: flex;
+  align-self: center;
   margin: auto 100px;
-  gap: 100px;
+  gap: 6em;
+  height: 40vw;
+}
+
+.stark-img {
+  max-width: 100%;
+  height: auto;
 }
 
 .overoverskrift {
