--- a/css/style.scss
+++ b/css/style.scss
@@ -362,11 +362,15 @@ p{
     align-self: center;
     margin: auto 100px;
     gap: 6em;
-    height: 40vw;
+    width: 100%;
+
+        article{
+            padding-right: 9em;
+        }
  }
 
 .stark-img{
-    max-width: 100%;
+    max-width: 80%;
     height: auto;
 }
 
