--- a/css/style.scss
+++ b/css/style.scss
@@ -777,6 +777,14 @@ p{
     text-align: center;
 }
 
+.case-wrapper .woodfarve{
+    padding: 0 2em 0 3em;
+}
+
+.nysgerrigstory{
+    padding: 3em 3em 0 3em;
+}
+
 
 /**********--- Styling af Om Sotry Media siden---*******/
 
