--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -469,6 +469,75 @@ footer{
     border-radius: 0 0 0 45px;
 }
 
+/*********--Storytelling--**********/
+
+.hero-story-mobil-img{
+    width: 80%;
+    margin-bottom: 0;
+}
+
+.hvad-er-storytelling{
+    flex-direction: column;
+    margin-bottom: 30em;
+}
+
+.hvad-er-storytelling article{
+    padding: 0 3em;
+}
+
+.baalsted{
+    width: 100%;
+    height: auto;
+    padding: 0em 0em 2em 3em;
+    margin: 0;
+}
+
+.hvorfor-storytelling{
+    padding: 3em;
+}
+
+.hvorfor-storytelling .hvorfor-story-knap{
+    padding: 0.7em 2em;
+}
+
+.case{
+    padding: 3em;
+}
+
+.case-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.case-wrapper .tekst-venstre{
+    padding: 3em;
+}
+
+.case-wrapper .tekst-hojre{
+    padding: 3em;
+}
+
+.case-wrapper .bark-img-mobil{
+    order: 2;
+}
+
+.case-wrapper .woodfarve{
+    width: 100%;
+    padding: 2em 0;
+}
+
+.case-wrapper .woodmood{
+    width: 50%;
+    align-self: center;
+}
+
+.case-wrapper .finger-mobil{
+    width: 50%;
+    align-self: center;
+}
+
+
+
 
 
 }
