forsiden tilrettet - animeret baggrund og video tilføjet

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -69,6 +69,10 @@ p{
     grid-template-columns: 50px 180px 1fr 200px 50px;
 }
 
+/**********--forside--*********/
+
+
+
 /********--Ydelser--**********/
 
 .stark-container{
@@ -142,7 +146,6 @@ p{
     padding: 0 4em 0 3em ;
 }
 
- }
 
 /************--Storytelling--**********/
 
@@ -189,6 +192,15 @@ p{
     height: 100%;
 }
 
+/***************--Om story Media--**************/
+
+/*************--Kontakt-side--***************/
+
+/**************--FAQ-side--**************/
+
+
+
+}
 
 /*-----------------------*/
 /********--Mobil--********/
@@ -327,6 +339,10 @@ footer{
 .mailikon, .telefonikon-footer{
     padding-left: 0.2em;
 }
+
+/*******---forside--**********/
+
+
 
 /********--Ydelser--*********/
 
@@ -537,7 +553,11 @@ footer{
 }
 
 
+/***************--Om story Media--**************/
 
+/*************--Kontakt-side--***************/
+
+/**************--FAQ-side--**************/
 
 
 }
