--- a/css/style.scss
+++ b/css/style.scss
@@ -875,46 +875,55 @@ p{
 
 /*Specialisering*/
 .special{
-    margin-top: 50px;
-    margin-bottom: 100px;
+    margin-top: 100px;
     text-align: center;
-
-        .beige-box{
-            background-color: partial.$primary-color;
-            padding: 100px 40px 0 20px ;
-            border: 7px solid partial.$bg-color;
-        }
 }
 
 .beige-box1{
     display: flex;
     justify-content: space-evenly;
+    margin-top: 100px;
+
+    .beige-box{
+        width: 50%;
+        background-color: partial.$primary-color;
+        padding: 100px 100px 100px 100px ;
+        border: 7px solid partial.$bg-color;
+    }
 }
 
 /*Start up + pynt (billede på billede)*/
 .startup-omos{
     position: relative;
-    text-align: center;
-    margin: 200px 0 200px 0;
-}
-
-.stregen-fyld{
+    padding: 150px 0 150px 0;
+  }
+  
+  .stregen-fyld {
     width: 100%;
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 0;
     z-index: 1;
-}
+  }
+  
+  .startup-os-img {
+    position: absolute;
+    top: 60%; 
+    left: 40%; 
+    z-index: 2; 
+  }
 
+/*opstart*/
 .omos-sektion{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin-top: 200px;
+    margin-top: 300px;
 }
 
 .omos-logo-txt{
     grid-column: 1/3;
     border: 7px solid partial.$primary-color;
+    padding: 50px 50px 50px 50px;
 
         img{
             width: 500px;
@@ -924,6 +933,7 @@ p{
 .veardi{
     grid-column: 3/4;
     background-color: partial.$primary-color;
+    padding: 50px 0 0 30%;
 }
 
 
@@ -1050,6 +1060,7 @@ main input[type=submit]{
     visibility: hidden;
     transition: opacity 0.5s ease, visibility 0.5s ease;
     position: absolute;
+    z-index: 2;
     background-color: rgb(255, 255, 255);
     font-family: "roboto", sans-serif;
     font-size: 20px;
@@ -1084,8 +1095,15 @@ main input[type=submit]{
     visibility: visible;
 }
  
+.streg-faq{
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+}
+
 /*informations kasser*/
 .faq-box1{
+    position: relative;
     height: 475px;
     background-color: partial.$bg-color;
     padding-left: 100px;
