--- a/css/style.css
+++ b/css/style.css
@@ -149,25 +149,6 @@ p {
   padding: 6em;
 }
 
-/*Chat funktion*/
-.chatfunktion {
-  padding: 20px;
-  position: fixed;
-  top: 90%;
-  left: 93%;
-}
-
-/*Brødkrumme*/
-.brodkromme {
-  writing-mode: vertical-lr;
-  text-orientation: mixed;
-  font-size: 26px;
-  position: absolute;
-  height: 260px;
-  right: 30%;
-  top: 100%;
-}
-
 /*Pil op (i bunden)*/
 .pilop {
   display: flex;
@@ -286,7 +267,7 @@ p {
 
 /*Intro/informationstekst*/
 .intro {
-  background-image: url(../img/logo\ -\ ikon\ baggrund.png);
+  background-image: url(../img/logo-ikon\ baggrund.png);
   background-size: 60%;
   background-position: right;
   background-repeat: no-repeat;
@@ -342,18 +323,22 @@ p {
 .foto img {
   height: 650px;
   width: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .txt2 {
-  grid-column: 3/6;
+  grid-column: 4/6;
 }
 
 .foto2 {
-  grid-column: 1/3;
+  grid-column: 1/4;
 }
 .foto2 img {
   height: 650px;
   width: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .logo-foto {
@@ -589,7 +574,7 @@ p {
   margin-bottom: 145px;
 }
 .branding-container-venstre section {
-  grid-area: 1/1/2 2;
+  grid-area: 1/1/2/2;
   background-color: rgba(239, 234, 225, 0.6);
   padding-left: 6em;
   padding-right: 6em;
@@ -707,7 +692,7 @@ p {
 
 .case-wrapper {
   display: grid;
-  grid-template-columns: repeat(1fr 1fr 1fr);
+  grid-template-columns: repeat(3, 1fr);
   padding-bottom: 4em;
 }
 .case-wrapper .tekst-venstre {
