--- a/css/style.css
+++ b/css/style.css
@@ -313,30 +313,30 @@ p {
   padding-top: 10px;
 }
 
-.txt {
+.content-txt {
   grid-column: 1/4;
 }
 
-.foto {
+.content-foto {
   grid-column: 4/6;
 }
-.foto img {
+.content-foto img {
   height: 650px;
-  width: 500px;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.txt2 {
-  grid-column: 4/6;
+.content-txt2 {
+  grid-column: 3/6;
 }
 
-.foto2 {
-  grid-column: 1/4;
+.content-foto2 {
+  grid-column: 1/3;
 }
-.foto2 img {
+.content-foto2 img {
   height: 650px;
-  width: 500px;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
