--- a/css/style.scss
+++ b/css/style.scss
@@ -296,31 +296,33 @@ p{
         }
 }
 
-.txt{
+.content-txt{
     grid-column: 1/4;
 }
 
-.foto{
+.content-foto{
     grid-column: 4/6;
 
-        img{
-            height: 650px;
-            width: 500px;
-            object-fit: cover;
-        }
-}
-.txt2{
-    grid-column: 4/6;
+    img{
+        height: 650px;
+        width: 100%;
+        object-fit: cover;
+    }
 }
 
-.foto2{
-    grid-column: 1/4;
+.content-txt2{
+    grid-column: 3/6;
+    
+}
 
-        img{
-            height: 650px;
-            width: 500px;
-            object-fit: cover;
-        }
+.content-foto2{
+    grid-column: 1/3;
+
+    img{
+        height: 650px;
+        width: 100%;
+        object-fit: cover;
+    }
 }
 
 .logo-foto{
