mediaqueries om story media

--- a/css/style.css
+++ b/css/style.css
@@ -802,7 +802,7 @@ p {
 
 .info-os {
   background-color: #ffffff;
-  margin-top: 350px;
+  margin-top: 200px;
   padding: 100px;
 }
 
@@ -823,9 +823,11 @@ p {
 
 .iveark-os-txt {
   grid-column: 2/4;
+  width: 100%;
+  height: 850px;
   border: 7px solid #F7F1E6;
   border-left: none;
-  padding: 150px 150px 0 150px;
+  padding: 50px;
 }
 
 /*Specialisering*/
@@ -834,15 +836,15 @@ p {
   text-align: center;
 }
 
-.beige-box1 {
+.beige-box {
   display: flex;
   justify-content: space-evenly;
   margin-top: 100px;
 }
-.beige-box1 .beige-box {
+.beige-box .beige-box1, .beige-box .beige-box2 {
   width: 50%;
   background-color: #F7F1E6;
-  padding: 100px 100px 100px 100px;
+  padding: 50px 50px 50px 50px;
   border: 7px solid #ffffff;
 }
 
