--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -204,6 +204,40 @@ p{
 
 /***************--Om story Media--**************/
 
+.info-os{
+    margin-top: 50px;
+}
+
+.iveark-os-txt{
+    padding: 50px 50px 0 50px;
+}
+
+.special img{
+    width: 90%;
+    text-align: center;
+}
+
+.beige-box{
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.startup-omos{
+    text-align: center;
+    padding: 40px 0 0 0;
+    margin: 60px 0 0 0;
+}
+
+.startup-os-img {
+    left: 25%;  
+  }
+
+  .veardi{
+    padding-top: 80px;
+    padding-left: 30px;
+}
+
 /*************--Kontakt-side--***************/
 
 .kontaktform{
@@ -422,7 +456,6 @@ footer{
 
 .vispakker-container{
     display: grid;
-    grid-template-rows: ;
     margin-bottom: 0;
 }
 
@@ -609,6 +642,87 @@ footer{
 
 
 /***************--Om story Media--**************/
+.img-os{
+    margin-top: 100px;
+
+        img{
+            height: 180px;
+            width: 145px;
+        }
+
+        h2{
+            font-size: 30px;
+        }
+}
+
+.info-os{
+    margin-top: 30px;
+    padding: 30px;
+
+    h2{
+        text-align: center;
+    }
+}
+
+.iveark-os{
+    display: flex;
+    flex-direction: column;
+
+        img{
+            height: 500px;
+        }
+}
+
+.iveark-os-txt{
+    border: 7px solid #F7F1E6;
+    height: 100%;
+}
+
+.beige-box{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+
+    .beige-box1, .beige-box2{
+        width: 80%;
+        padding: 10px 10px 10px 10px ;
+    }
+
+    .beige-box2{
+        justify-content: right;
+    }
+}
+
+.startup-omos{
+    padding: 150px 0 0 0;
+  }
+  
+  .startup-os-img {
+    width: 90%;
+    top: 10%; 
+    left: 5%;  
+  }
+
+.omos-sektion{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+}
+
+.omos-logo-txt{
+    padding: 30px 30px 30px 30px;
+
+        img{
+            width: 300px;
+        }
+}
+
+.veardi{
+    padding-left: 70px;
+    padding-bottom: 70px;
+    line-height: 1cm;
+}
+
 
 /*************--Kontakt-side--***************/
 .text p, .text a{
