--- a/css/style.scss
+++ b/css/style.scss
@@ -832,7 +832,7 @@ p{
 
 .info-os{
     background-color: partial.$bg-color;
-    margin-top: 350px;
+    margin-top: 200px;
     padding: 100px;
 }
 
@@ -852,9 +852,11 @@ p{
 
 .iveark-os-txt{
     grid-column: 2/4;
+    width: 100%;
+    height: 850px;
     border: 7px solid partial.$primary-color;
     border-left: none;
-    padding: 150px 150px 0 150px;
+    padding:50px;
 }
 
 /*Specialisering*/
@@ -863,15 +865,15 @@ p{
     text-align: center;
 }
 
-.beige-box1{
+.beige-box{
     display: flex;
     justify-content: space-evenly;
     margin-top: 100px;
 
-    .beige-box{
+    .beige-box1, .beige-box2{
         width: 50%;
         background-color: partial.$primary-color;
-        padding: 100px 100px 100px 100px ;
+        padding: 50px 50px 50px 50px ;
         border: 7px solid partial.$bg-color;
     }
 }
