--- a/css/style.scss
+++ b/css/style.scss
@@ -203,6 +203,7 @@ p{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .BGforside{
