--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -80,8 +80,37 @@ p{
 }
 
 /**********--forside--*********/
+.hero-content{
+    padding: 0 30px 0 30px;
+}
 
+.intro{
 
+    background-size: 120%;
+
+        h2, h3, p{
+            margin-right: 50px;
+        }
+}
+
+.karrusel-box{
+    height: 600px;
+    margin: 50px 50px 50px 50px;
+
+    h3{
+        text-align: center;
+        padding: 40px;
+    }
+    
+    .karrusel{
+        
+        .slider{
+                width: 100%;
+                padding: 0 20px 0 20px;
+                margin-left: 60px;
+                }
+    } 
+}
 
 /********--Ydelser--**********/
 
@@ -431,7 +460,102 @@ footer{
 
 /*******---forside--**********/
 
+.hero-section video{
+    width: 1%;
+    margin-bottom: 0;
+}
+.hero-content{
+    padding: 0 30px 0 30px;
+}
 
+.brandingvideo{
+        h4{
+            padding-top: 50px;
+            padding-bottom: 4%;
+        }
+
+        h2{
+            padding-bottom: 50px;
+        }
+}
+
+.intro{
+    background-size: 60%;
+    margin: 40px 40px 40px 40px;
+
+        h2, h3, p{
+            margin:0;
+            padding: 10px 0 10px 0;
+        }
+
+        li{
+            font-size: 18px;
+        }
+}
+
+.text-img-section{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: auto;
+
+        h2{
+            padding-top: 50px;
+        }
+}
+
+.content-txt{
+    order: 2;
+    height: 500px;
+}
+
+.content-foto{
+    order: 1;
+
+    img{
+        height: 500px;
+    }
+}
+
+.content-txt2{
+    order: 2;
+    height: 600px;
+}
+
+.content-foto2{
+    order: 1;
+
+        img{
+            height: 500px;
+        }
+}
+
+.logo-foto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+}
+
+
+
+.karrusel-box{
+    height: 400px;
+    width: auto;
+    margin: 30px 20px 30px 20px;
+
+    h3{
+        padding: 20px;
+    }
+    
+    .karrusel{
+
+            .slider img{
+                width: 200px;
+                height: auto;
+            }
+    } 
+}
 
 /********--Ydelser--*********/
 
